Updated documentation for bordieu maps

--- a/notebooks/topicviz_colab_demo.ipynb
+++ b/notebooks/topicviz_colab_demo.ipynb
@@ -76,9 +76,37 @@
     ")\n",
     "fig.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "969d1396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_b = tv.visualize_bourdieu(\n",
+    "    docs=docs,  \n",
+    "    embedding_model=embedding_model,\n",
+    "    x_left_words=[\"This shows high autonomy satisfaction\"],\n",
+    "    x_right_words=[\"This shows low autonomy satisfaction\"],\n",
+    "    y_top_words=[\"This shows high autonomy frustration\"],\n",
+    "    y_bottom_words=[\"This shows low autonomy frustration\"],\n",
+    "    radius_size=0.2,\n",
+    "    height=800,\n",
+    "    width=800,\n",
+    "    clustering=False,\n",
+    "    density=False,\n",
+    "    convex_hull=True,\n",
+    ")\n",
+    "fig_b.show()"
+   ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
